--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,9 +15,9 @@ composeBom = "2025.01.01"
 
 androidx-data-store = "1.1.2"
 
-kotlinx-serialization-json = "1.7.3"
+kotlinx-serialization-json = "16.0.1"
 
-multidex = "2.0.1"
+google-mlkit = "16.0.1"
 
 navigation = "2.8.6"
 
@@ -29,6 +29,8 @@ room = "2.6.1"
 
 lottie = "6.3.0"
 timber = "5.0.1"
+multidex = "2.0.1"
+lifecycle = "2.8.7"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -49,7 +51,6 @@ androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-toolin
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 
-androidx-multidex = { group = "androidx.multidex", name = "multidex", version.ref = "multidex" }
 androidx-datastore-core = { group = "androidx.datastore", name = "datastore-core", version.ref = "androidx-data-store" }
 androidx-datastore-preferences = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "androidx-data-store" }
 
@@ -59,19 +60,46 @@ navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx",
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "dragger-hilt" }
 hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "dragger-hilt" }
 
+lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle" }
+lifecycle-viewmodel-ktx = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "lifecycle" }
+
 room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
 room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
 room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
 
 kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinx-serialization-json" }
 
+text-recognition = { group = "com.google.mlkit", name = "text-recognition", version.ref = "google-mlkit" }
+text-recognition-chinese = { group = "com.google.mlkit", name = "text-recognition-chinese", version.ref = "google-mlkit" }
+text-recognition-devanagari = { group = "com.google.mlkit", name = "text-recognition-devanagari", version.ref = "google-mlkit" }
+text-recognition-japanese = { group = "com.google.mlkit", name = "text-recognition-japanese", version.ref = "google-mlkit" }
+text-recognition-korean = { group = "com.google.mlkit", name = "text-recognition-korean", version.ref = "google-mlkit" }
+entity-extraction = { group = "com.google.mlkit", name = "entity-extraction", version = "16.0.0-beta5" }
+
+kotlinx-coroutines-play-services = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-play-services", version = "1.7.3" }
+
 lottie = { group = "com.airbnb.android", name = "lottie", version.ref = "lottie" }
 timber = { group = "com.jakewharton.timber", name = "timber", version.ref = "timber" }
+multidex = { group = "androidx.multidex", name = "multidex", version.ref = "multidex" }
 
 [bundles]
 navigation = [
     "navigation-fragment-ktx",
     "navigation-ui-ktx",
+]
+
+text-recognition = [
+    "text-recognition",
+    "text-recognition-chinese",
+    "text-recognition-devanagari",
+    "text-recognition-chinese",
+    "text-recognition-japanese",
+    "text-recognition-korean",
+]
+
+lifecycle = [
+    "lifecycle-runtime-ktx",
+    "lifecycle-viewmodel-ktx"
 ]
 
 [plugins]
