--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -46,6 +46,7 @@ androidx-recyclerview = { group = "androidx.recyclerview", name = "recyclerview"
 androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 androidx-ui = { group = "androidx.compose.ui", name = "ui" }
+androidx-ui-text-google-fonts = { group = "androidx.compose.ui", name = "ui-text-google-fonts", version = "1.7.7" }
 androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
 androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
@@ -88,7 +89,8 @@ kotlinx-coroutines-play-services = { group = "org.jetbrains.kotlinx", name = "ko
 lottie = { group = "com.airbnb.android", name = "lottie", version.ref = "lottie" }
 timber = { group = "com.jakewharton.timber", name = "timber", version.ref = "timber" }
 multidex = { group = "androidx.multidex", name = "multidex", version.ref = "multidex" }
-
+line-awesome = { group = "br.com.devsrsouza.compose.icons.android", name = "line-awesome", version = "1.0.0" }
+tabler-icons = { group = "br.com.devsrsouza.compose.icons.android", name = "tabler-icons", version = "1.0.0" }
 image-cropper = { group = "com.vanniktech", name = "android-image-cropper", version = "4.5.0" }
 
 [bundles]
@@ -116,6 +118,7 @@ lifecycle = [
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 dagger-hilt = { id = "com.google.dagger.hilt.android", version.ref = "dragger-hilt" }
 navigation-safeargs = { id = "androidx.navigation.safeargs.kotlin", version = "2.8.6" }
